--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,6 @@
 {
     "manifest_version": 2,
+  
     "name": "DEFINITY",
     "description": "This extension will analyze a page, and show up if any fake news is detected",
     "version": "1.0",
@@ -9,7 +10,7 @@
         "persistent": false
     },
     "browser_action": {
-     "default_icon" : "assets/icon/128.png",
+     "default_icon" : "assets/icon/pop.png",
      "default_title" : "DEFINITY",
      "default_popup": "popup.html"
     },
@@ -27,7 +28,7 @@
                 "https://*/*"
             ],
             "js" : [
-                "js/content.js"
+                "js/sss.js"
             ],
             "run_at" : "document_end",
             "all_frames" : false
