--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
         "persistent": false
     },
     "browser_action": {
-     "default_icon" : "assets/icon/pop.png",
+     "default_icon" : "assets/icon/128.png",
      "default_title" : "DEFINITY",
      "default_popup": "popup.html"
     },
@@ -28,7 +28,7 @@
                 "https://*/*"
             ],
             "js" : [
-                "js/sss.js"
+                "js/content.js"
             ],
             "run_at" : "document_end",
             "all_frames" : false
