--- a/manifest.json
+++ b/manifest.json
@@ -4,11 +4,8 @@
     "name": "DEFINITY",
     "description": "This extension will analyze a page, and show up if any fake news is detected",
     "version": "1.0",
+
     "default_locale": "en",
-    "background" : {
-        "scripts" : ["js/background.js"],
-        "persistent": false
-    },
     "browser_action": {
      "default_icon" : "assets/icon/72.png",
      "default_title" : "DEFINITY",
@@ -21,20 +18,8 @@
         "128" : "assets/icon/128.png",
         "256" : "assets/icon/256.png"
     },
-    "content_scripts" : [
-        {
-            "matches" : [
-                "http://*/*",
-                "https://*/*"
-            ],
-            "js" : [
-                "js/content.js"
-            ],
-            "run_at" : "document_end",
-            "all_frames" : false
-        }
-      ],
     "permissions": [
-        "tabs"
+        "tabs",
+        "<all_urls>"
     ]
 }
